--- a/WebApp/components/moreInfoListingPage/moreInfoListingEditing/moreInfoListingEditing.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingEditing/moreInfoListingEditing.scss
@@ -52,14 +52,16 @@
 }
 
 .editImage {
+  width: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
   align-items: flex-end;
   margin-bottom: 5px;
 }
 
 .upload {
-    margin-right: 5px;
+  margin-left: 5px;
     width: 50px;
     height: 50px;
     overflow: hidden;
