Frontend Task - Updated removeItem() console log in case of an error - Added deletePost function to firebase - Made remove button text white for styling - Added new button handler to moreInfoListingSpec to removeItem

--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingSpec/moreInfoListingSpec.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingSpec/moreInfoListingSpec.scss
@@ -142,3 +142,7 @@ Purpose: Spacing for the specifications of an item in moreInfoPage
   display: table-cell;
   vertical-align: middle;
 }
+
+.removeButtonHandlerText {
+  color: $white;
+}
