--- a/WebApp/components/listingsPage/listing/listing.scss
+++ b/WebApp/components/listingsPage/listing/listing.scss
@@ -28,5 +28,23 @@ Purpose: Spacing and style for a single listing in the grid
   }
 }
 
+.listingPic {
+  width: 100%;
+  height: 60%;
+  text-align: center;
+  border-radius: 5px;
+  vertical-align: middle;
+  display: relative;
+}
+
+.imgLoading {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 
 //background: #587077;
