running into a layer issue with MyPorfilePage when displaying MyPurchases

--- a/WebApp/components/myProfilePage/purchasesTab/purchasesTab.scss
+++ b/WebApp/components/myProfilePage/purchasesTab/purchasesTab.scss
@@ -19,6 +19,7 @@ Purpose: Styling for the myPurchasesTab component
   flex-direction: column;
   font-size: 25px;
   font-weight: 200;
+  z-index: 0;
 	// background: $fuchsia;
 	padding: 2% 5% 2% 5%;
 }
