--- a/WebApp/components/myProfilePage/purchasesTab/purchasedItem/purchasedItem.scss
+++ b/WebApp/components/myProfilePage/purchasesTab/purchasedItem/purchasedItem.scss
@@ -29,9 +29,28 @@ Purpose: Spacing and style for the purchased item
   z-index: -1;
   background: $grey50;
   flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   width: 100%;
   margin-bottom: -15px;
   border-radius: 5px 5px 0px 0px;
+}
+
+.item-image {
+  height: 50px;
+  padding: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: auto;
+  background: $grey65;
+  border-radius: 5px;
+}
+
+.imgLoading {
+  height: 50px;
+  width: 50px;
+  background: $grey50;
 }
 
 .item-price {
@@ -45,6 +64,9 @@ Purpose: Spacing and style for the purchased item
 }
 
 .item-bottom {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   z-index: -1;
   background: $grey65;
   flex: 1;
@@ -52,4 +74,9 @@ Purpose: Spacing and style for the purchased item
   margin-top: -15px;
   border-radius: 0px 0px 5px 5px;
   box-shadow: 0px 3px 18px $blackShadow;
+}
+
+.item-description {
+  margin-left: 10px;
+  overflow-x: hidden;
 }
