--- a/WebApp/components/myProfilePage/purchasesTab/purchasedItem/purchasedItem.scss
+++ b/WebApp/components/myProfilePage/purchasesTab/purchasedItem/purchasedItem.scss
@@ -16,17 +16,17 @@ Purpose: Spacing and style for the purchased item
 
 .item-container {
   height: 150px;
-  width: 100%;
+  // width: 100%;
   display: flex;
   flex-direction: column;
   color: white;
   font-size: 20px;
-  margin-top: 5%;
+  margin-top: 40px;
   align-items: flex-end;
 }
 
 .item-top {
-  z-index: -1;
+  // z-index: -1;
   background: $grey50;
   flex: 1;
   display: flex;
@@ -61,22 +61,25 @@ Purpose: Spacing and style for the purchased item
   margin-right: 3%;
   border-radius: 10px;
   text-align: center;
+  z-index: 1;
 }
 
 .item-bottom {
   display: flex;
   flex-direction: row;
   align-items: center;
-  z-index: -1;
+  // z-index: -1;
   background: $grey65;
   flex: 1;
   width: 100%;
   margin-top: -15px;
   border-radius: 0px 0px 5px 5px;
   box-shadow: 0px 3px 18px $blackShadow;
+  overflow-x: hidden;
 }
 
 .item-description {
   margin-left: 10px;
-  overflow-x: hidden;
+
+  // z-index: 3;
 }
