--- a/WebApp/components/myProfilePage/purchasesTab/purchasesTab.scss
+++ b/WebApp/components/myProfilePage/purchasesTab/purchasesTab.scss
@@ -19,7 +19,6 @@ Purpose: Styling for the myPurchasesTab component
   flex-direction: column;
   font-size: 25px;
   font-weight: 200;
-  z-index: 0;
 	// background: $fuchsia;
-	padding: 2% 5% 2% 5%;
+	padding: 0px 20px;
 }
