--- a/WebApp/components/wifModal/wifModal.scss
+++ b/WebApp/components/wifModal/wifModal.scss
@@ -35,7 +35,11 @@
 	&:hover {
 		cursor: pointer;
 	}
-	width: 50%;
+	width: 50px;
 	background: $brightGreen;
 	border-radius: 5px;
+}
+.wif-form {
+	display: flex;
+	flex-direction: column;
 }
