added the background image to loginRegister. forgot to create a new branch :(.

--- a/WebApp/components/loginRegister/loginRegister.scss
+++ b/WebApp/components/loginRegister/loginRegister.scss
@@ -29,12 +29,13 @@ Purpose: Styling for loginRegister page
 }
 
 .rightSide {
-	dispaly: flex;
-	flex: 4;
+	display: flex;
+	flex: 3;
 	// background-color: $japaneseIndigoDarkBlue;
-  background-color: #0E1C27;
+  // background-color: #0E1C27;
 	flex-direction: column;
 	justify-content: center;
+  align-items: center;
 	z-index: 2;
 }
 
@@ -92,7 +93,6 @@ Purpose: Styling for loginRegister page
 	height: 435px;
 	width: 400px;
 	border-radius: 4px;
-	margin: 35% 10% 0% 10%;
 }
 
 .captionBox {
