Frontend Task - Added some registration info - return logic for register function error messages

--- a/WebApp/components/loginRegister/register/register.scss
+++ b/WebApp/components/loginRegister/register/register.scss
@@ -178,3 +178,16 @@ Purpose: Styling for the register page
 .importPhotoIconContainer{
   margin: 5% 0%;
 }
+
+.errorMessage {
+	color: $red;
+	margin: 10% 0% 0% 25%;
+	text-overflow: ellipsis;
+  	max-width: 400px;
+}
+
+.registerMessage {
+	color: $white;
+	margin: 10% 0% 0% 25%;
+}
+
