changes made when running the blockchain

--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -37,5 +37,6 @@ $red:     #FF4136;
 $fuchsia: #F012BE;
 
 @import url('https://fonts.googleapis.com/css?family=Nunito:200,300,400');
+@import url('https://fonts.googleapis.com/css?family=Roboto:200,300,400');
 $base-font-family: 'Nunito', monospace;
 $base-font: 16px/20px $base-font-family;
