--- a/WebApp/components/loginRegister/register/register.scss
+++ b/WebApp/components/loginRegister/register/register.scss
@@ -181,11 +181,17 @@ Purpose: Styling for the register page
 
 .registerErrorMessage {
 	color: $red;
-	margin: 10% 0% 0% 25%;
+	margin: 5% 0% 0% 25%;
+	text-overflow: ellipsis;
+  	max-width: 400px;
+  	text-align: center;
 }
 
 .registerMessage {
 	color: $white;
 	margin: 10% 0% 0% 25%;
+	text-overflow: ellipsis;
+  	max-width: 400px;
+  	text-align: center;
 }
 
