--- a/WebApp/components/loginRegister/register/register.scss
+++ b/WebApp/components/loginRegister/register/register.scss
@@ -138,6 +138,7 @@ Purpose: Styling for the register page
 	height: 50px;
 	background-color: $registerButtonOrange;
 	border-radius: 4px;
+	margin-bottom: 10%;
 }
 
 .registerButtonText{
@@ -181,17 +182,27 @@ Purpose: Styling for the register page
 
 .registerErrorMessage {
 	color: $red;
-	margin: 5% 0% 0% 25%;
 	text-overflow: ellipsis;
-  	max-width: 400px;
+  	max-width: 550px;
   	text-align: center;
+  	margin: auto;
 }
 
 .registerMessage {
 	color: $white;
-	margin: 10% 0% 0% 25%;
 	text-overflow: ellipsis;
-  	max-width: 400px;
+  	max-width: 550px;
   	text-align: center;
+  	margin: auto;
 }
+
+.registerMessageContainer {
+	display: flex;
+	background-color: $grey20;
+	height: 60px;
+	width: 600px;
+	border-radius: 8px;
+	margin: 0% 0% 0% 5%;
+}
+
 
