Frontend Task - Make register message box size dynamic to parent size.

--- a/WebApp/components/loginRegister/register/register.scss
+++ b/WebApp/components/loginRegister/register/register.scss
@@ -199,8 +199,8 @@ Purpose: Styling for the register page
 .registerMessageContainer {
 	display: flex;
 	background-color: $grey20;
-	height: 60px;
-	width: 600px;
+	height: 10%;
+	width: 90%;
 	border-radius: 8px;
 	margin: 0% 0% 0% 5%;
 }
