Frontend Task - Added functionality for routing back to listings

--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingSpec/moreInfoListingSpec.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingSpec/moreInfoListingSpec.scss
@@ -146,3 +146,7 @@ Purpose: Spacing for the specifications of an item in moreInfoPage
 .removeButtonHandlerText {
   color: $white;
 }
+
+.addButtonHandlerText {
+  color: $white;
+}
