--- a/WebApp/components/moreInfoListingPage/moreInfoListingEditing/moreInfoListingEditing.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingEditing/moreInfoListingEditing.scss
@@ -34,6 +34,7 @@
 }
 .cancelEditing { margin-left: 15px; }
 .submitEditing { margin-right: 15px; }
+.whiteText { color: white; &:hover{cursor: pointer;} }
 
 .moreInfoListingEditingBottom {
   width: 100%;
@@ -61,12 +62,13 @@
 }
 
 .upload {
-  margin-left: 5px;
+    margin-left: 5px;
     width: 50px;
     height: 50px;
     overflow: hidden;
     position: relative;
 }
+
 .upload > input[type="file"] {
     font-size: 200px;
     position: absolute;
