--- a/WebApp/components/listingsPage/listing/listingContent/listingContentText/listingContentText.scss
+++ b/WebApp/components/listingsPage/listing/listingContent/listingContentText/listingContentText.scss
@@ -25,7 +25,9 @@ Purpose: Spacing and style for the bottom half of a listing
   line-height: 30px;
   color: white;
   font-size: 30px;
-  width: 100%;
+  max-width: 100%;
+  position: relative;
+  overflow-x: hidden;
   text-align: center;
   margin-bottom: 10px;
 }
