--- a/WebApp/components/listingsPage/listing/listingContent/listingContentText/listingContentText.scss
+++ b/WebApp/components/listingsPage/listing/listingContent/listingContentText/listingContentText.scss
@@ -25,7 +25,8 @@ Purpose: Spacing and style for the bottom half of a listing
   line-height: 30px;
   color: white;
   font-size: 30px;
-  max-width: 100%;
+  max-width: 290px;
+  overflow-x: hidden;
   position: relative;
   overflow-x: hidden;
   text-align: center;
