--- a/WebApp/components/rightSideBar/rightSideBarItems/rightSideBarItem/rightSideBarItem.scss
+++ b/WebApp/components/rightSideBar/rightSideBarItems/rightSideBarItem/rightSideBarItem.scss
@@ -23,6 +23,9 @@ Purpose: Style and spacing
 }
 
 .rightSideBarItemTitle {
+  width: 125px;
+  margin-left: 12.5px;
+  overflow-x: hidden;
 	text-align: center;
 }
 
