fixed styling issue

--- a/WebApp/components/rightAccountBar/rightAccountBarContent/rightAccountBarContent.scss
+++ b/WebApp/components/rightAccountBar/rightAccountBarContent/rightAccountBarContent.scss
@@ -41,3 +41,7 @@ Purpose: provides styling and spacing for RightAccountBarContent
   margin-right: 10px;
   margin-bottom: 33px;
 }
+
+.textPadding {
+  margin: 0px 0px 0px 20px;
+}
