--- a/WebApp/components/myProfilePage/walletTab/walletTab.scss
+++ b/WebApp/components/myProfilePage/walletTab/walletTab.scss
@@ -19,9 +19,9 @@
 }
 
 .photoImportName {
-  width: 220px;
+  width: auto;
   height: auto;
-  margin: 10% 0%;
+  margin: 5% 0%;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -33,7 +33,7 @@
 }
 
 .photo {
-  width: 150px;
+  width: auto;
   height: auto;
   padding: 5px;
   border-radius: 5px;
@@ -41,19 +41,27 @@
 }
 
 .userName {
-  width: 150px;
+  width: auto;
   height: 25px;
   margin-top: 5px;
   text-align: center;
+  overflow: hidden;
 }
 
 .importIcon {
   width: 50px;
   height: 50px;
   margin: 0px 0px 30px 10px;
-  &:hover {
-    cursor: pointer;
-  }
+  overflow: hidden;
+  position: relative;
+}
+
+.importIcon > input[type="file"] {
+    font-size: 200px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    opacity: 0;
 }
 
 .topBottomContainer {
@@ -68,17 +76,14 @@
   width: 500px;
   background: $japaneseIndigoDarkBlue;
   border-radius: 5px;
-
+  margin-bottom: 5%;
 }
 
 .name, .email, .address, .wifForm {
   margin: 20px 0px 0px 20px;
-}
-
-.wifForm {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin-bottom: 10px;
   margin-right: 20px;
 }
@@ -97,4 +102,13 @@
   &:hover {
     cursor: pointer;
   }
+}
+
+.imgLoading {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
