--- a/WebApp/components/myProfilePage/walletTab/walletTab.scss
+++ b/WebApp/components/myProfilePage/walletTab/walletTab.scss
@@ -77,6 +77,7 @@
   background: $japaneseIndigoDarkBlue;
   border-radius: 5px;
   margin-bottom: 5%;
+  color: white;
 }
 
 .name, .email, .address, .wifForm {
@@ -84,18 +85,28 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  align-items: center;
   margin-bottom: 10px;
   margin-right: 20px;
 }
 
-.wifInput {
-  line-height: 35px;
+.pub_address_val, .name_val, .email_val, .wif_val {
+  overflow: hidden;
+  margin-left: 10px;
+  color: $neoGreen;
+}
+
+.wif_val {
+  flex-grow: 10;
+  background: $black90;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 .wifButton {
   color: black;
   font-weight: 400;
-  padding: 10px;
+  padding: 5px;
   margin-left: 10px;
   border-radius: 5px;
   background: $registerButtonOrange;
