--- a/WebApp/components/loginRegister/register/register.scss
+++ b/WebApp/components/loginRegister/register/register.scss
@@ -32,7 +32,12 @@ Purpose: Styling for the register page
 	flex-direction: row;
 	width: 100%;
 	min-height: 100vh;
-	background-color: $greyRegisterBackground;
+  margin-bottom: 3%;
+}
+
+.wrapper {
+  background-color: $greyRegisterBackground;
+  height: 100%;
 }
 
 .leftSideRegisterPage{
@@ -42,7 +47,7 @@ Purpose: Styling for the register page
 }
 
 .rightSideRegisterPage{
-	dispaly: flex;
+	display: flex;
 	flex: 5;
 	flex-direction: column;
 }
@@ -150,8 +155,10 @@ Purpose: Styling for the register page
 
 .photoContainer {
   width: 250px;
+  height: auto;
   background: $greyRegisterBackground;
   padding: 5px;
+  margin-bottom: 5%;
 }
 
 .imgDefault {
@@ -164,7 +171,7 @@ Purpose: Styling for the register page
 	flex-direction: column;
   align-items: center;
 	width: 370px;
-	height: 450px;
+  height: auto;
 	background-color: $profileSquareGreen;
 	border-radius: 4px;
 	margin: 25% 0% 0% 8%;
@@ -173,7 +180,7 @@ Purpose: Styling for the register page
 .profilePictureCaption{
 	display: flex;
 	font-size: 24px;
-	margin: 10% 0% 5% 0%;
+  margin: 10% 0% 5% 0%;
 }
 
 .importPhotoIconContainer{
