fixed mofeInfoListing images

--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingBottom.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingBottom.scss
@@ -24,4 +24,5 @@ Purpose: Spacing for the bottom of the moreInfoListingPage
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-bottom: 3%;
 }
