--- a/WebApp/components/moreInfoListingPage/moreInfoListingPage.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingPage.scss
@@ -14,7 +14,7 @@ Purpose: Spacing and style for the listing description in the checkOut page
 **/
 
 .moreInfoListingPage {
-  // height: auto;
+  height: auto;
   // width: auto;
   left: 175px;
   right: 175px;
