fixed broken remove and add_to_cart buttons in moreInfoListingSpec

--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingSpec/moreInfoListingSpec.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingSpec/moreInfoListingSpec.scss
@@ -128,6 +128,7 @@ Purpose: Spacing for the specifications of an item in moreInfoPage
 
 .cartBtn {
   display: table;
+  color: white;
   // margin-top: 20px;
   background: $brightGreen;
   height: 40px;
@@ -142,6 +143,7 @@ Purpose: Spacing for the specifications of an item in moreInfoPage
 
 .removeBtn {
   display: table;
+  color: white;
   background: $red;
   height: 40px;
   width: 40%;
